  The TempFile task still does not create the file by default, can be instructed
  to do so however using a new parameter.
  Bugzilla report 33969.
  
Fixed bugs:
-----------

 * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
   Bugzilla report 38199.

 * <symlink> task couldn't overwrite files that were in the way of the symlink.
   Bugzilla report 43426.

 * <touch> task couldn't differentiate between "no resources specified" and "no resources
   matched."  Bugzilla report 43799.
   
   


Other changes:
--------------

 * There is now a FileProvider interface for resources that act as a source
   of filenames. This should be used by tasks that require resources
   to provide filenames, rather than require that all resources
   are instances or subclasses of FileResource
   Bugzilla report 43348
   
 * Fixcrlf now gives better error messages on bad directory attributes.
   Bugzilla report 43936
   


Changes from Ant 1.7.0 TO Ant 1.7.1
=============================================

Changes that could break older environments:
-------------------------------------------

* String resources only have properties single expanded. If you relied on
  <string> resources being expanded more than once, it no longer happens.
  Bugzilla report 42277.

* A String resource's encoding attribute was only taken into account when
  set from the resource's OutputStream; the InputStream provided the String's
  binary content according to the platform's default encoding. Behavior has
  been modified to encode outgoing (InputStream) content as well as encoding
  incoming (OutputStream) content.

* <scriptcondition> now prefers evaluation result/return value over value property.

* <java> with fork now returns gives -1 instead of 0 as result when failonerror
  is false and some exception (including timeout) occurs. Br 42377. 

* ant-type attribute has been marked as deprecated and a warning has been